<resources>
    <string name="app_name">My Application</string>
    <string name="string_register">Rgister student</string>
    <string name="string_year">Select Academic Year</string>
    <string name="string_sid">Enter Student ID</string>
    <string name="string_semester">Select the semester</string>
    <string name="string_check">I agree to terms and conditions</string>
    <string name="string_submit">Submit</string>
    <string name="string_cancel">Cancel</string>
    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="semesters">
        <item></item>
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>

</resources>